# super-noughts-and-crosses

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  file.dot  out.txt
src/: ai_thread.rs  board.rs  cell.rs  common.rs  fonts.rs  game.rs  handle_click.rs  handle_input.rs  help.txt  main.rs  monte_carlo.rs  state.rs  styles.rs  ui.rs
src/ai/: comms.rs  cruzita.rs  graphvis.rs  message.rs  mod.rs  monte_carlo.rs  monte_carlo_node.rs  monte_carlo_settings.rs  noughbert.rs  noughbert_message.rs  simulation_thread.rs  thorn.rs  thorn_message.rs  thoughts.rs
src/game/: board.rs  cell.rs  game.rs  legal.rs  mod.rs  player.rs  symbol.rs  value.rs
src/monte_carlo/: message.rs  mod.rs  monte_carlo.rs  monte_carlo_policy.rs  monte_carlo_settings.rs  node.rs
src/monte_carlo_me/: message.rs  mod.rs  monte_carlo_me.rs  node.rs
src/noughbert/: graphvis.rs  message.rs  mod.rs  monte_carlo.rs  monte_carlo_node.rs  monte_carlo_policy.rs  monte_carlo_settings.rs  node.rs  noughbert.rs  simulation_thread.rs
src/ui/: constant_elements.rs  game_elements.rs  keybinds_elements.rs  mod.rs  settings_elements.rs  symbols_elements.rs  textbox.rs  ui.rs  ui_state.rs  ui_tab.rs
