[package]
name = "a_level_project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
ego-tree = "0.6.2"
fastrand = "2.0.1"
graphvis_ego_tree = "0.3.4"
id_tree = "1.8.0"
md5 = "0.7.0"
num_cpus = "1.16.0"
raylib = { version = "5.0.2", features = ["with_serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
webbrowser = { version = "1.0.0", features = ["hardened"] }
